commit tree 0394ca9c4d2086408880c7e32ebcb34abfa3f488

--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Pig Latinizer</h1>
+    <h3>Enter your phrase:</h3>
+    <form action="/piglatinize" method="POST">
+      <p>Pig Latinizer!<input type="text" name="user_phrase"></p>
+      <input type="submit" value="Submit"> 
+    </form>
   
   </body>
 </html>
